# WMS2SHP

./: .gitignore  .pre-commit-config.yaml  README.md  get_landuse.py  pyproject.toml
mapping_code/: 109年國土利用現況調查成果.csv
src/: get_landuse.py
